[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/menu/MenuSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/menu/ControlsSettingsSlider.gd" type="Script" id=2]
[ext_resource path="res://fonts/font_64.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/ui/menu/MenuItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/menu/PlayerControlsSlider.tscn" type="PackedScene" id=5]


[node name="ControlsSettingsSlider" type="Node2D"]
script = ExtResource( 2 )

[node name="MenuSlider" parent="." instance=ExtResource( 1 )]

[node name="Label" parent="MenuSlider/Slider/LabelRoot" index="0"]
text = "Управление"

[node name="Player1" parent="MenuSlider/Slider/MenuController" index="0" instance=ExtResource( 4 )]
position = Vector2( -80, 0 )

[node name="Label" type="Label" parent="MenuSlider/Slider/MenuController/Player1"]
margin_left = 100.0
margin_top = 20.0
margin_right = 660.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Игрок 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="MenuSlider/Slider/MenuController/Player1"]
margin_left = 580.0
margin_top = 20.0
margin_right = 980.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Keyboard"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" parent="MenuSlider/Slider/MenuController" index="1" instance=ExtResource( 4 )]
position = Vector2( -79.9888, 140 )

[node name="Label" type="Label" parent="MenuSlider/Slider/MenuController/Player2"]
margin_left = 100.0
margin_top = 20.0
margin_right = 660.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Игрок 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="MenuSlider/Slider/MenuController/Player2"]
margin_left = 579.989
margin_top = 20.0
margin_right = 979.989
margin_bottom = 121.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gamepad #0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackLabel" parent="MenuSlider/Slider" index="4"]
position = Vector2( -140, 0 )

[node name="PlayerControlsSlider" parent="MenuSlider/Slider" index="5" instance=ExtResource( 5 )]
position = Vector2( 120, 0 )
[connection signal="activated" from="MenuSlider/Slider/MenuController/Player1" to="." method="_on_Player1_activated"]
[connection signal="activated" from="MenuSlider/Slider/MenuController/Player2" to="." method="_on_Player2_activated"]

[editable path="MenuSlider"]
